logs/Slang/generated/hdlconv/hdlconvertor_p844.sv.log
name: hdlconvertor_p844
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:4:1: error: expected member
xor x1 (out, a, b);
^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:5:1: error: expected member
specify
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:7:1: error: expected member
specparam invertrise = 3, invertfall = 4;
^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:8:5: error: expression is not constant
if (a) (b => out) = (invertrise, invertfall);
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:8:5: note: reference to non-constant variable 'a' is not allowed in a constant expression
if (a) (b => out) = (invertrise, invertfall);
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:2:7: note: declared here
input a, b;
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:8:8: error: expected member
if (a) (b => out) = (invertrise, invertfall);
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:9:5: error: expression is not constant
if (b) (a => out) = (invertrise, invertfall);
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:9:5: note: reference to non-constant variable 'b' is not allowed in a constant expression
if (b) (a => out) = (invertrise, invertfall);
    ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:2:10: note: declared here
input a, b;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:9:8: error: expected member
if (b) (a => out) = (invertrise, invertfall);
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:10:5: error: expression is not constant
if (~a)(b => out) = (noninvrise, noninvfall);
    ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:10:6: note: reference to non-constant variable 'a' is not allowed in a constant expression
if (~a)(b => out) = (noninvrise, noninvfall);
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:2:7: note: declared here
input a, b;
      ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:10:8: error: expected member
if (~a)(b => out) = (noninvrise, noninvfall);
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:11:5: error: expression is not constant
if (~b)(a => out) = (noninvrise, noninvfall);
    ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:11:6: note: reference to non-constant variable 'b' is not allowed in a constant expression
if (~b)(a => out) = (noninvrise, noninvfall);
     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:2:10: note: declared here
input a, b;
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:11:8: error: expected member
if (~b)(a => out) = (noninvrise, noninvfall);
       ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p844.sv:12:1: error: expected member
endspecify
^~~~~~~~~~
